--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="/src/style.css" rel="stylesheet" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>React Lab 2</title>
   </head>
   <body>
     <div id="root"></div>
